src/golden/functions/typeerrors/test.golden/msgerrors.fl
	struct Foo
	
	method meth
		<- "hello"
		<- Foo
//		<- [42] // This definitely is an error and should result in
// msgerrors.fl  6.4:    <- [ _ 42]
//                          Number cannot be a Message

// but I just can't deal with it at the moment - 2020-10-01